<resources>
    <string name="app_name">Tracer</string>
    <string name="error">Error</string>
    <string name="hello">Hello, </string>
    <string name="emergency_contacts">Emergency Contacts</string>
    <string name="add">Add</string>
    <string name="call">Call</string>
    <string name="text">Text</string>
    <string name="custom_toast_txt">You are tracking </string>
    <string name="new_contact">New Contact</string>
    <string name="device_settings">Device Settings</string>
    <string name="tracker_settings">Tracker Settings</string>
    <string name="tracker_name">Tracker Name</string>
    <string name="tracker_sim_num">Tracker SIM Number</string>
    <string name="Tacker_path_refresh_rate">Tacker Path Refresh Rate</string>
    <string name="alert_settings">Alert Settings</string>
    <string name="low_battery_alert">Low Battery Alert</string>
    <string name="sos_key_pressed">SOS Key Pressed</string>
    <string name="battery_saving_mode">Battery Saving Mode</string>
    <string name="geo_fence">"Geo Fence"</string>
    <string name="setting_up_geo_fence">Setting Up Geo Fence</string>
    <string name="view">View</string>
    <string name="sos_actions">SOS Actions</string>
    <string name="location">Location</string>
    <string name="sms_text">SMS Text</string>
    <string name="more">More</string>
    <string name="device_status">Device Status</string>
    <string name="battery">Battery</string>
    <string name="medium">Medium</string>
    <string name="synced">Synced</string>
    <string name="sync_now">Sync Now</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign up</string>
    <string name="log_out">Log out</string>
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="personal">Personal</string>
    <string name="first_name_field">First Name</string>
    <string name="last_name_field">Last Name</string>
    <string name="account_settings">Account Settings</string>
    <string name="shop_for_a_tracker">Shop for a tracker</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="current_email">Current Email</string>
    <string name="new_email">New Email</string>
    <string name="confirm_new_email">Confirm New Email</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyDpmee6T8cYNYLslyFDNOxEMP-joHHe7Ms</string>
    <string name="subscription">Subscription</string>
    <string name="I_agree_to_tracers">I agree to Tracers </string>
    <string name="terms_conditions">terms and conditions</string>
    <string name="lets_get_Started">Lets get started</string>
</resources>